--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
     "react-transition-group": "4.3.0",
-    "recharts": "1.7.1"
+    "recharts": "1.7.1",
+    "shortid": "2.2.15"
   },
   "devDependencies": {
     "typescript": "3.3.3"
